# SpendFinder

./: .gitignore  pyproject.toml
spendfinder/cmds/: report_cloudwatch.py
spendfinder/runner/: runner.py
